[package]
name = "music-analyzer"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp = { version = "0.11.0", features = ["all"] }
# cpal = "0.13.4"
rodio = "0.14.0"
rand = "0.8.4"
rustfft = "6.0.1"
eframe = "0.14.0"